log
Thu 07 Sep 2023 02:11:03 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
f563109
Thu 07 Sep 2023 02:12:13 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
4d531f3
Thu 07 Sep 2023 02:14:12 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c4250be
Thu 07 Sep 2023 02:17:35 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
908d08d
Thu 07 Sep 2023 06:21:52 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘i’ [-Werror=unused-variable]
   43 |   long i = hash(key, map->capacity);
      |        ^
cc1: all warnings being treated as errors
Compilation failed
c7d9312
Thu 07 Sep 2023 06:25:34 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘i’ [-Werror=unused-variable]
   43 |   long i = hash(key, map->capacity);
      |        ^
cc1: all warnings being treated as errors
Compilation failed
17362e0
Thu 07 Sep 2023 06:26:57 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
be83f6e
Thu 07 Sep 2023 06:27:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
986df49
Thu 07 Sep 2023 06:30:11 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 20/70
fd16e48
